--- a/src/styles/_quotes.scss
+++ b/src/styles/_quotes.scss
@@ -18,7 +18,9 @@
     font-family: $font-logo;
     margin: 0;
     color: var(--link);
-    font-size: 6.5vmin;
+  transform: rotate(-2deg);
+  font-size: 6.5vmin;
+
   }
   @include media("<=xsmall") {
     top: 0;
@@ -27,9 +29,9 @@
       font-size: 4.5vmin;
       line-height: 2rem;
     }
-    &__title {
-      font-size: 4vmin;
-    }
+    // &__title {
+    //   font-size: 4vmin;
+    // }
   }
   @include media(">xsmall", "<=medium") {
     top: 0;
@@ -38,9 +40,9 @@
       font-size: 4.5vmin;
       line-height: 3rem;
     }
-    &__title {
-      font-size: 4vmin;
-    }
+    // &__title {
+    //   font-size: 4vmin;
+    // }
   }
   @include media(">medium") {
     top: 2vh;
@@ -49,8 +51,8 @@
       font-size: 4.5vmin;
       line-height: 3.5rem;
     }
-    &__title {
-      font-size: 4vmin;
-    }
+    // &__title {
+    //   font-size: 4vmin;
+    // }
   }
 }
